parse-display/tests/compile_fail/from_str/no_field_in_regex.stderr
error: field `x` is not appear in format.
 --> tests/compile_fail/from_str/no_field_in_regex.rs:4:20
  |
4 | #[from_str(regex = "abc")]
  |                    ^^^^^
